2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
	'Bug 457003 - code completion shows variables out of scope'.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
	'Bug 460234 - Invalid options shown when typing 'override''.

2008-12-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* UnitTests.mdp:
	* MonoDevelop.Projects/CompletionDatabaseTests.cs: Added new tests for
	the code completion database.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* UnitTests.mdp: Fix target framework and some references.

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Set
	correct base class.

2008-11-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: added unit test
	for 'Bug 447985 - Exception display tip is inaccurate for derived
	(custom) exceptions'.

2008-11-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Fixed unit tests.

2008-11-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added test for
	bug 4441110

2008-11-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectTests.cs: Fix incorrect satellit assembly
	name.

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor.Tests/LineSplitterTests.cs: some cosmetic changes.

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
	'Bug 441671 - Finalisers show up in code completion'.

2008-11-03  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs: added some
	basic unit tests.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectTests.cs: Add unit test for bug #400420.

2008-10-31  Mike Krüger  <mkrueger@novell.com>
