@@ -1,5 +1,11 @@
 2009-01-06  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added unit test
+	for 'Bug 457237 - code completion doesn't show static methods when
+	setting global variable'.
+
+2009-01-06  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
 	'Bug 457003 - code completion shows variables out of scope'.
 
